# blind_vote

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py
examples/: get_results.py  init_schema.py  upload_vote.py
frontend/: index.html  vote.html
src/nilrag/: __init__.py  config.py  nildb_requests.py  util.py
test/: rag.py
